Shenandoah: Windows assertion failure after JDK-8245464

XMLWordPrintable

    • gc
    • b25
    • Verified

        JDK-8245464 made the accidental change that dropped the alignment to os::vm_allocation_granularity(), which fails on Windows like this:

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (c:/cygwin64/home/test/jdk-jdk/src/hotspot/share/memory/virtualspace.cpp:123), pid=7764, tid=2340
        # assert((alignment & (granularity - 1)) == 0) failed: alignment not aligned to os::vm_allocation_granularity()
        #

        --------------- T H R E A D ---------------
         
        Current thread (0x000002834b1ef860): JavaThread "Unknown thread" [_thread_in_vm, id=2340, stack(0x000000bc85b00000,0x000000bc85c00000)]
         
        Stack: [0x000000bc85b00000,0x000000bc85c00000]
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0xa3bd21] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
        V [jvm.dll+0xcd5086] VMError::report+0xf86 (vmError.cpp:731)
        V [jvm.dll+0xcd688e] VMError::report_and_die+0x7ee (vmError.cpp:1537)
        V [jvm.dll+0xcd6f64] VMError::report_and_die+0x64 (vmError.cpp:1330)
        V [jvm.dll+0x43aa32] report_vm_error+0x102 (debug.cpp:264)
        V [jvm.dll+0xcd08ba] ReservedSpace::initialize+0x8a (virtualspace.cpp:122)
        V [jvm.dll+0xccffd7] ReservedSpace::ReservedSpace+0x37 (virtualspace.cpp:67)
        V [jvm.dll+0xb541ed] ShenandoahHeap::initialize+0xb1d (shenandoahHeap.cpp:308)
        V [jvm.dll+0xc9a730] universe_init+0x110 (universe.cpp:656)
        V [jvm.dll+0x5e9fa0] init_globals+0x80 (init.cpp:117)
        V [jvm.dll+0xc6bdaa] Threads::create_vm+0x77a (thread.cpp:3888)
        V [jvm.dll+0x6c1fde] JNI_CreateJavaVM_inner+0xbe (jni.cpp:3776)
        V [jvm.dll+0x6c4faf] JNI_CreateJavaVM+0x1f (jni.cpp:3859)
        C [jli.dll+0x53f7] JavaMain+0x10f (java.c:417)
        C [ucrtbase.dll+0x20e72]
        C [KERNEL32.DLL+0x17bd4]
        C [ntdll.dll+0x6ce51]

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: