8245773: Shenandoah: Windows assertion failure after JDK-8245464

Reviewed-by: stuefe